cbits/Bullet.h

void btGjkPairDetector_getClosestPointsNonVirtual(void *c,void* p0,void* p1,void* p2); //method: getClosestPointsNonVirtual void ( ::btGjkPairDetector::* )( ::btDiscreteCollisionDetectorInterface::ClosestPointInput const &,::btDiscreteCollisionDetectorInterface::Result &,::btIDebugDraw * ) 
float btGjkPairDetector_getCachedSeparatingDistance(void *c); //method: getCachedSeparatingDistance ::btScalar ( ::btGjkPairDetector::* )(  ) const
void btGjkPairDetector_m_cachedSeparatingAxis_set(void *c,float* a); //attribute: ::btVector3 btGjkPairDetector->m_cachedSeparatingAxis
void btGjkPairDetector_m_cachedSeparatingAxis_get(void *c,float* a);
// attribute not supported: //attribute: ::btConvexPenetrationDepthSolver * btGjkPairDetector->m_penetrationDepthSolver
void btGjkPairDetector_m_simplexSolver_set(void *c,void* a); //attribute: ::btVoronoiSimplexSolver * btGjkPairDetector->m_simplexSolver
void* btGjkPairDetector_m_simplexSolver_get(void *c); //attribute: ::btVoronoiSimplexSolver * btGjkPairDetector->m_simplexSolver
void btGjkPairDetector_m_minkowskiA_set(void *c,void* a); //attribute: ::btConvexShape const * btGjkPairDetector->m_minkowskiA
void* btGjkPairDetector_m_minkowskiA_get(void *c); //attribute: ::btConvexShape const * btGjkPairDetector->m_minkowskiA
void btGjkPairDetector_m_minkowskiB_set(void *c,void* a); //attribute: ::btConvexShape const * btGjkPairDetector->m_minkowskiB
void* btGjkPairDetector_m_minkowskiB_get(void *c); //attribute: ::btConvexShape const * btGjkPairDetector->m_minkowskiB
void btGjkPairDetector_m_shapeTypeA_set(void *c,int a); //attribute: int btGjkPairDetector->m_shapeTypeA
int btGjkPairDetector_m_shapeTypeA_get(void *c); //attribute: int btGjkPairDetector->m_shapeTypeA
void btGjkPairDetector_m_shapeTypeB_set(void *c,int a); //attribute: int btGjkPairDetector->m_shapeTypeB
int btGjkPairDetector_m_shapeTypeB_get(void *c); //attribute: int btGjkPairDetector->m_shapeTypeB
void btGjkPairDetector_m_marginA_set(void *c,float a); //attribute: ::btScalar btGjkPairDetector->m_marginA
float btGjkPairDetector_m_marginA_get(void *c); //attribute: ::btScalar btGjkPairDetector->m_marginA
void btGjkPairDetector_m_marginB_set(void *c,float a); //attribute: ::btScalar btGjkPairDetector->m_marginB
float btGjkPairDetector_m_marginB_get(void *c); //attribute: ::btScalar btGjkPairDetector->m_marginB
void btGjkPairDetector_m_ignoreMargin_set(void *c,int a); //attribute: bool btGjkPairDetector->m_ignoreMargin
int btGjkPairDetector_m_ignoreMargin_get(void *c); //attribute: bool btGjkPairDetector->m_ignoreMargin
void btGjkPairDetector_m_cachedSeparatingDistance_set(void *c,float a); //attribute: ::btScalar btGjkPairDetector->m_cachedSeparatingDistance
float btGjkPairDetector_m_cachedSeparatingDistance_get(void *c); //attribute: ::btScalar btGjkPairDetector->m_cachedSeparatingDistance
void btGjkPairDetector_m_lastUsedMethod_set(void *c,int a); //attribute: int btGjkPairDetector->m_lastUsedMethod
int btGjkPairDetector_m_lastUsedMethod_get(void *c); //attribute: int btGjkPairDetector->m_lastUsedMethod
void btGjkPairDetector_m_curIter_set(void *c,int a); //attribute: int btGjkPairDetector->m_curIter
int btGjkPairDetector_m_curIter_get(void *c); //attribute: int btGjkPairDetector->m_curIter
void btGjkPairDetector_m_degenerateSimplex_set(void *c,int a); //attribute: int btGjkPairDetector->m_degenerateSimplex
int btGjkPairDetector_m_degenerateSimplex_get(void *c); //attribute: int btGjkPairDetector->m_degenerateSimplex
void btGjkPairDetector_m_catchDegeneracies_set(void *c,int a); //attribute: int btGjkPairDetector->m_catchDegeneracies